--- a/podfile
+++ b/podfile
@@ -1,4 +1,5 @@
 pod 'Google-AdMob-Ads-SDK', '~> 6.8.0'
 pod 'FlurrySDK/FlurrySDK'
 pod 'FlurrySDK/FlurryAds'
+pod 'GoogleAnalytics-iOS-SDK'
 pod 'AdMobMediationAdapterIAd', '~> 6.6.0d'
