--- a/podfile
+++ b/podfile
@@ -1,5 +1,5 @@
-pod 'Google-AdMob-Ads-SDK', '~> 6.8.0'
+pod 'Google-AdMob-Ads-SDK' 
 pod 'FlurrySDK/FlurrySDK'
 pod 'FlurrySDK/FlurryAds'
 pod 'GoogleAnalytics-iOS-SDK'
-pod 'AdMobMediationAdapterIAd', '~> 6.6.0d'
+pod 'AdMobMediationAdapterIAd' 
