--- a/podfile
+++ b/podfile
@@ -1,7 +1,9 @@
 platform :ios, '7.0'
-pod 'Google-AdMob-Ads-SDK', '~> 6.8.0'
+pod 'Google-AdMob-Ads-SDK'
 pod 'FlurrySDK/FlurrySDK'
 pod 'FlurrySDK/FlurryAds'
 pod 'GoogleAnalytics-iOS-SDK'
-pod 'AdMobMediationAdapterIAd', '~> 6.6.0d'
+pod 'AdMobMediationAdapterIAd'
 pod 'JTSImageViewController'
+pod 'iRate'
+pod 'Appirater'
