--- a/podfile
+++ b/podfile
@@ -2,4 +2,5 @@ pod 'Google-AdMob-Ads-SDK'
 pod 'FlurrySDK/FlurrySDK'
 pod 'FlurrySDK/FlurryAds'
 pod 'GoogleAnalytics-iOS-SDK'
+pod 'iRate'
 pod 'AdMobMediationAdapterIAd' 
