--- a/podfile
+++ b/podfile
@@ -1,4 +1,6 @@
 platform :ios, '7.0'
+pod 'MarqueeLabel'
+pod 'CrashlyticsFramework'
 pod 'Google-AdMob-Ads-SDK'
 pod 'FlurrySDK/FlurrySDK'
 pod 'FlurrySDK/FlurryAds'
