--- a/game4096/Resources/Data/Strings/game4096-Info.plist
+++ b/game4096/Resources/Data/Strings/game4096-Info.plist
@@ -9,11 +9,11 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.haihw.2048jav</string>
+	<string>com.haihw.2048boobs</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>2048Bikini</string>
+	<string>2048boobs</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
