--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,8 @@
 
 #####
 # OS X temporary files that should never be committed
-
+Crashlytics.framework/
+Frameworks/Crashlytics.framework/
 .DS_Store
 *.swp
 *.lock
