add options, use startapp ad platform

--- a/podfile
+++ b/podfile
@@ -1,9 +1,8 @@
 platform :ios, '7.0'
 pod 'Google-AdMob-Ads-SDK'
-pod 'FlurrySDK/FlurrySDK'
-pod 'FlurrySDK/FlurryAds'
 pod 'GoogleAnalytics-iOS-SDK'
-pod 'AdMobMediationAdapterIAd'
 pod 'JTSImageViewController'
 pod 'iRate'
+pod 'AdColony'
+pod 'CrashlyticsFramework'
 pod 'Appirater'
