--- a/game4096/Resources/Data/Strings/game4096-Info.plist
+++ b/game4096/Resources/Data/Strings/game4096-Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>2048 Girls</string>
+	<string>Hot 2048</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
