--- a/podfile
+++ b/podfile
@@ -1,7 +1,8 @@
-pod 'Google-AdMob-Ads-SDK'
-pod 'FlurrySDK/FlurrySDK'
-pod 'FlurrySDK/FlurryAds'
-pod 'GoogleAnalytics-iOS-SDK'
-pod 'AdMobMediationAdapterIAd'
+source 'https://github.com/CocoaPods/Specs.git'
+platform :ios, '7.0'
 pod 'JTSImageViewController'
 pod 'iRate'
+pod 'GoogleAnalytics'
+#pod 'Crashlytics'
+#pod 'Google-AdMob-Ads-SDK'
+pod 'Google-Mobile-Ads-SDK', '~> 7.4.1'
