--- a/podfile
+++ b/podfile
@@ -1,9 +1,6 @@
 platform :ios, '7.0'
-pod 'Google-AdMob-Ads-SDK'
-pod 'GoogleAnalytics-iOS-SDK'
+pod 'Google-Mobile-Ads-SDK'
+pod 'GoogleAnalytics'
 pod 'JTSImageViewController'
 pod 'iRate'
-pod 'AdColony'
-pod 'CrashlyticsFramework'
 pod 'MBProgressHUD'
-pod 'Appirater'
